--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
       </div>
      
     </section>
-    <section id="maindestination" class="content-destination">
+    <section class="content-destination">
       <h2 id="destinationh2">Pick Your Destination</h2>
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
       <img id="destination_img" src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
 
-      <div id="destination1" class="destination">
+      <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div id="btn1" class="btn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
@@ -79,6 +79,9 @@
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
         <div class="btn">Sign Me Up!</div>
       </div>
+    </section>
+    <section>
+      <textarea id="textselection">Here is some text to do the focus goal</textarea>
     </section>
   </div><!-- container -->
 
